<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="website.madalina.bakingapp.mvp.ingredient.IngredientFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_ingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</FrameLayout>
